fixed page overflow error when scrolling up

--- a/client/index.sass
+++ b/client/index.sass
@@ -2,5 +2,12 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif
   font-weight: 400
 
+html
+  overflow: hidden
+  height: 100%
+
 body
   margin: 0
+  overflow: auto
+  height: 100%
+  overscroll-behavior: none
